# pyweb-hw-13-part-2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: config.ini
data/: authors.json
quotes/quoteapp/: forms.py  models.py  seed.py  seed_mongo.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_author.py  0003_remove_quote_created_remove_quote_description_and_more.py  0004_alter_quote_quote.py  0005_alter_author_born_date_alter_author_born_location_and_more.py  0006_alter_author_description.py  0007_alter_author_description.py  0008_alter_author_description.py  0009_alter_tag_name.py  0010_alter_quote_quote.py  0011_alter_quote_quote.py
quotes/quoteapp/templates/quoteapp/: author.html  base.html  detail.html  index.html  quote.html  quotes.html
quotes/quoteapp/templatetags/: extract_tags.py
quotes/quotes/: asgi.py  settings.py  urls.py
quotes/users/: forms.py  models.py  urls.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/: login.html  password_reset.html  password_reset_email.html  profile.html  signup.html
